# CMA_Labs

./: .gitignore  README.md
lab01/task1/: CMakeLists.txt  Plot.ipynb  checker.cpp  checker.h  clock_guard.cpp  clock_guard.h  ldlt_helper.cpp  ldlt_helper.h  lu_helper.cpp  lu_helper.h  main.cpp  quadratic_matrix.cpp  quadratic_matrix.h  random_generator.cpp  random_generator.h  symmetric_matrix.cpp  symmetric_matrix.h  table.xlsx  vector.cpp  vector.h
lab01/task1/.ipynb_checkpoints/: Plot-checkpoint.ipynb
lab01/task2/: CMakeLists.txt  Plot.ipynb  clock_guard.cpp  gmres.cpp  gmres.h  main.cpp  matrix.cpp  matrix.h  norm_matrix.cpp  norm_matrix.h  vector.cpp  vector.h
lab01/task2/.ipynb_checkpoints/: Plot-checkpoint.ipynb
lab01/task3/: CMakeLists.txt  Plot.ipynb  clock_guard.h  gmres.cpp  gmres.h  main.cpp  norm_matrix.cpp  norm_matrix.h  smart_gauss.cpp  smart_gauss.h  vector.cpp  vector.h
lab01/task3/.ipynb_checkpoints/: Plot-checkpoint.ipynb
lab02/task1/: CMakeLists.txt  Plot.ipynb  ans1.txt  ans2.txt  main.cpp  matrix.cpp  matrix.h
lab02/task1/.ipynb_checkpoints/: Plot-checkpoint.ipynb
lab02/task2/: CMakeLists.txt  ans1.txt  ans2.txt  main.cpp  matrix.cpp  matrix.h
lab02/task3/: CMakeLists.txt  Plot.ipynb  ans1.txt  ans2.txt  main.cpp  matrix.cpp  matrix.h
lab02/task3/.ipynb_checkpoints/: Plot-checkpoint.ipynb
